fix up code quality